--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<title>VM Contábil</title>
 
 		<meta charset="utf-8">
-		<link rel="stylesheet" href="css/styles.css">
+		<link rel="stylesheet" href="styles.css">
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:100,400" rel="stylesheet">
 		<script type="text/javascript" src="js/scripts.js"></script>
 		<meta name="viewport" content="width=device-width, inital-scale=1.0">
