--- a/contato.html
+++ b/contato.html
@@ -40,7 +40,7 @@
 				<h3>E-mail:</h3>
 				<p>roberta.vmcontabil@gmail.com</p>
 				
-				<h3>Telefone:</h3>
+				<h3>Telefone e whatsapp:</h3>
 				<p>(81) 98857-4526</p>
 
 				
