--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="contato.html">Contatos</a></li>
-					<li><a href="servicos.html">Serviços Prestados</a></li>
+					<li><a href="servicos.html">Serviços</a></li>
 					<li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
 				</ul>
 			</div>
