--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 			</div>
 
 		<div class="feito-index">
-			<h6>Site feito por Leandro Dias</h6>
-			<h6>Contatos: (81) 984447075</h6>
+			<h6>Desenvolvido por Leandro Dias</h6>
+			<h6>Fone e whatsapp: (81) 984447075</h6>
 			<h6>Email: leandro.dias83@hotmail.com</h6>
 		</div>
 		
