--- a/contato.html
+++ b/contato.html
@@ -31,7 +31,7 @@
 				<ul class="caminho">
 					<li><a href="index.html">Home</a></li>
 					<li>></li>
-					<li>Contato</li>
+					<li><a href="contato.html">Contatos</a></li>
 				</ul>
 
 				<h1>Contato</h1>
