--- a/contato.html
+++ b/contato.html
@@ -31,6 +31,7 @@
 				<ul class="caminho">
 					<li><a href="index.html">Home</a></li>
 					<li>></li>
+					<li><a href="servicos.html">Serviços</a></li>
 					
 				</ul>
 
