--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
 			</div>
 
 		<div class="feito-index">
-			<h6>Desenvolvido por Leandro Dias</h6>
-			<h6>Fone e whatsapp: (81) 984447075</h6>
-			<h6>Email: leandro.dias83@hotmail.com</h6>
+		
+		<footer>
+		<a href="https://leandroxxx741.github.io/curriculo/">Desenvolvido por Leandro Dias</a>
+		</footer>
+			
 		</div>
 		
 
